# l2-assistant

./: README.md  SKILL.md  genai-l2-assistant-implementation-plan.md  walkthrough.md  walkthrough_2.md
genai-l2-assistant/: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule.dir  docker-compose.yml  l2assistant.db-shm  l2assistant.db-wal  pyproject.toml  requirements-dev.txt  requirements.txt  search_kb.py
genai-l2-assistant/alembic/: env.py
genai-l2-assistant/app/: __init__.py  config.py  main.py
genai-l2-assistant/app/api/: __init__.py  middleware.py
genai-l2-assistant/app/core/: __init__.py  context_assembler.py  embedder.py  feedback_processor.py  llm_client.py  rag_pipeline.py  reranker.py  retriever.py
genai-l2-assistant/app/governance/: __init__.py  audit_logger.py  pii_anonymizer.py  rbac.py
genai-l2-assistant/app/ingestion/: __init__.py  cmdb_enricher.py  embedding_pipeline.py  kb_processor.py  mock_client.py  pipeline.py  servicenow_client.py  ticket_processor.py
genai-l2-assistant/app/models/: __init__.py  chat.py  feedback.py  incident.py  recommendation.py
genai-l2-assistant/app/storage/: __init__.py  cache.py  postgres.py  vector_store.py
genai-l2-assistant/app/utils/: __init__.py  retry.py  text_utils.py
genai-l2-assistant/app/workers/: celery_app.py  ingestion_worker.py  reindex_worker.py
genai-l2-assistant/docs/: api-reference.md  architecture.md  runbook.md
genai-l2-assistant/infra/github-actions/: ci.yml  deploy.yml
genai-l2-assistant/infra/k8s/: configmap.yaml  deployment.yaml  service.yaml
genai-l2-assistant/scripts/: bootstrap_index.py  eval_run.py  seed_test_data.py
genai-l2-assistant/tests/: conftest.py
(+26 files in other folders)
