[tool.poetry]
name = "genai-l2-assistant"
version = "1.0.0"
description = "RAG-powered GenAI L2 Support Assistant for ServiceNow incident resolution"
authors = ["L2 Assistant Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

# Web framework
fastapi = ">=0.111"
uvicorn = {version = ">=0.29", extras = ["standard"]}
pydantic = "^2.0"
pydantic-settings = "^2.0"

# LLM & AI
openai = "^1.0"
anthropic = "^0.28"

# Vector stores
pinecone-client = "^3.0"
pgvector = "^0.2"

# Database
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = "^0.29"
alembic = "^1.13"

# Task queue
celery = {version = "^5.0", extras = ["redis"]}
redis = "^5.0"

# NLP
rank-bm25 = "^0.2"
sentence-transformers = "^2.0"

# HTTP & utilities
httpx = "^0.27"
tenacity = "^8.0"
tiktoken = "^0.7"
numpy = "^1.24"

# Logging & monitoring
structlog = "^24.0"
prometheus-client = "^0.20"
prometheus-fastapi-instrumentator = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-mock = "^3.0"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.0"
httpx = "^0.27"  # for TestClient

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
